--- a/store_sale_prediction.ipynb
+++ b/store_sale_prediction.ipynb
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1840,7 +1840,7 @@
        "promo_time_week                                 0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1850,25 +1850,100 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 3.0 Filtragem de Variáveis"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df3 = df2.copy()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(844338, 28)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.1 Filtragem das linhas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df3 = df3[(df3['open'] != 0) & (df3['sales'] > 0)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2 Seleção das Colunas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols_drop = ['customers', 'open', 'promo_interval', 'month_map']\n",
+    "\n",
+    "df3 = df3.drop(cols_drop, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['store', 'day_of_week', 'date', 'sales', 'promo', 'state_holiday',\n",
+       "       'school_holiday', 'store_type', 'assortment', 'competition_distance',\n",
+       "       'competition_open_since_month', 'competition_open_since_year', 'promo2',\n",
+       "       'promo2_since_week', 'promo2_since_year', 'is_promo', 'year', 'month',\n",
+       "       'day', 'week_of_year', 'competition_since', 'competition_time_month',\n",
+       "       'promo_since', 'promo_time_week'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3.columns"
+   ]
   }
  ],
  "metadata": {
