--- a/store_sale_prediction.ipynb
+++ b/store_sale_prediction.ipynb
@@ -2838,6 +2838,50 @@
     "\n",
     "sns.heatmap(d, annot=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5.0 Data Preparation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df5 = df4.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.1 Normalização"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ao verificar a seção 4.1.2 é possivel perceber que não temos nenhum valor que segue uma distribuição normal, logo não será feita nenhuma normalização nos dados."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.2 Rescaling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.3 Transformation"
+   ]
   }
  ],
  "metadata": {
