applied enconding techniques

--- a/store_sale_prediction.ipynb
+++ b/store_sale_prediction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
     "from IPython.core.display import HTML\n",
     "from scipy import stats as ss\n",
     "\n",
-    "from sklearn.preprocessing import RobustScaler, MinMaxScaler\n",
+    "from sklearn.preprocessing import RobustScaler, MinMaxScaler, LabelEncoder\n",
     "\n"
    ]
   },
@@ -2850,7 +2850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2891,7 +2891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2920,6 +2920,31 @@
    "metadata": {},
    "source": [
     "## 5.3 Transformation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.3.1 Encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#state_holiday - One Hot Encoding\n",
+    "df5 = pd.get_dummies(df5, prefix=['state_holiday'], columns=['state_holiday'])\n",
+    "\n",
+    "#store_type - Label Encoding\n",
+    "le = LabelEncoder()\n",
+    "df5['store_type'] = le.fit_transform(df5['store_type'])\n",
+    "\n",
+    "#assortment - Ordinal Encoding\n",
+    "assortment_dict = {'basic': 1, 'extra': 2, 'extended':3}\n",
+    "df5['assortment'] = df5['assortment'].map(assortment_dict)"
    ]
   },
   {
