--- a/store_sale_prediction.ipynb
+++ b/store_sale_prediction.ipynb
@@ -6183,12 +6183,12 @@
         "rf_result"
       ],
       "metadata": {
-        "id": "oIiaPTteYEx8",
-        "outputId": "ec8aaab9-831b-46c7-fc9b-ca6268de872b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 89
-        }
+        },
+        "id": "oIiaPTteYEx8",
+        "outputId": "ec8aaab9-831b-46c7-fc9b-ca6268de872b"
       },
       "execution_count": 92,
       "outputs": [
@@ -6423,12 +6423,12 @@
         "xgb_result"
       ],
       "metadata": {
-        "id": "F8kjyXAUYqVt",
-        "outputId": "d4d037eb-006f-4f8e-e567-6359d07172b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 89
-        }
+        },
+        "id": "F8kjyXAUYqVt",
+        "outputId": "d4d037eb-006f-4f8e-e567-6359d07172b4"
       },
       "execution_count": 102,
       "outputs": [
@@ -6642,12 +6642,12 @@
         "modelling_result.sort_values('RMSE')"
       ],
       "metadata": {
-        "id": "33y1PW-uZ0lW",
-        "outputId": "c886bbdf-9634-4039-8e72-542f657ab9ed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "33y1PW-uZ0lW",
+        "outputId": "c886bbdf-9634-4039-8e72-542f657ab9ed"
       },
       "execution_count": 101,
       "outputs": [
@@ -6945,6 +6945,315 @@
           },
           "metadata": {},
           "execution_count": 101
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def cross_validation (x_training, kfold, model_name, model, verbose=False):\n",
+        "\n",
+        "  mae_list = []\n",
+        "  mape_list = []\n",
+        "  rmse_list = []\n",
+        "\n",
+        "  for k in reversed (range (1,kfold+1)):\n",
+        "\n",
+        "    if verbose:\n",
+        "      print('\\nKFold Number: {}'.format(k))\n",
+        "    # start and end date for validation\n",
+        "    validation_start_date = x_training['date'].max() - datetime.timedelta (days=k*6*7)\n",
+        "    validation_end_date = x_training['date'].max() - datetime.timedelta (days=(k-1)*6*7)\n",
+        "\n",
+        "    #filtering dataset\n",
+        "    training = x_training[x_training['date'] < validation_start_date]\n",
+        "    validation = x_training[(x_training['date'] >= validation_start_date) & (x_training['date'] <= validation_end_date)]\n",
+        "\n",
+        "    # training and validation dataset\n",
+        "    # training\n",
+        "    xtraining = training.drop(['date', 'sales'], axis=1)\n",
+        "    ytraining = training['sales']\n",
+        "\n",
+        "    # validation\n",
+        "    xvalidation = validation.drop(['date', 'sales'], axis=1)\n",
+        "    yvalidation = validation['sales']\n",
+        "\n",
+        "    # model\n",
+        "    m = model.fit(xtraining, ytraining)\n",
+        "\n",
+        "    # prediction\n",
+        "    yhat = m.predict (xvalidation)\n",
+        "\n",
+        "    # performance\n",
+        "    m_result = ml_error( model_name, np.expm1( yvalidation ), np.expm1(yhat ) )\n",
+        "\n",
+        "    # store performace of each kfold iteration\n",
+        "\n",
+        "    mae_list.append(m_result['MAE'])\n",
+        "    mape_list.append(m_result['MAPE'])\n",
+        "    rmse_list.append(m_result['RMSE'])\n",
+        "\n",
+        "  return pd.DataFrame({ 'Model Name': model_name,\n",
+        "                        'MAE CV': np.round(np.mean(mae_list),2).astype(str) + ' +/- ' + np.round(np.std(mae_list),2).astype(str),\n",
+        "                        'MAPE CV': np.round(np.mean(mape_list),2).astype(str) + ' +/- ' + np.round(np.std(mape_list),2).astype(str),\n",
+        "                        'RMSE CV': np.round(np.mean(rmse_list),2).astype(str) + ' +/- ' + np.round(np.std(rmse_list),2).astype(str)}, index=[0])"
+      ],
+      "metadata": {
+        "id": "T1PKci1Sm6N_"
+      },
+      "execution_count": 140,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_training = X_train [ cols_selected_boruta_full]\n"
+      ],
+      "metadata": {
+        "id": "mDphURIxmuXY"
+      },
+      "execution_count": 137,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = Lasso(alpha=0.01)\n",
+        "a = cross_validation(x_training, 5, 'Lasso', model)"
+      ],
+      "metadata": {
+        "id": "Z2gXD92htTLf",
+        "outputId": "df1d819c-cbf3-4acd-f01c-d097819d0847",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 143,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "KFold Number: 5\n",
+            "\n",
+            "KFold Number: 4\n",
+            "\n",
+            "KFold Number: 3\n",
+            "\n",
+            "KFold Number: 2\n",
+            "\n",
+            "KFold Number: 1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a"
+      ],
+      "metadata": {
+        "id": "pkoZ75ikuzKf",
+        "outputId": "32cfcc06-6b95-411f-a6ba-0a479d8a843e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 89
+        }
+      },
+      "execution_count": 144,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "  Model Name             MAE CV        MAPE CV             RMSE CV\n",
+              "0      Lasso  2116.38 +/- 341.5  0.29 +/- 0.01  3057.75 +/- 504.26"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-93925863-7b3e-4334-b2f1-9ce74f6b3bff\" class=\"colab-df-container\">\n",
+              "    <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Model Name</th>\n",
+              "      <th>MAE CV</th>\n",
+              "      <th>MAPE CV</th>\n",
+              "      <th>RMSE CV</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Lasso</td>\n",
+              "      <td>2116.38 +/- 341.5</td>\n",
+              "      <td>0.29 +/- 0.01</td>\n",
+              "      <td>3057.75 +/- 504.26</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "    <div class=\"colab-df-buttons\">\n",
+              "\n",
+              "  <div class=\"colab-df-container\">\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-93925863-7b3e-4334-b2f1-9ce74f6b3bff')\"\n",
+              "            title=\"Convert this dataframe to an interactive table.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
+              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "\n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-buttons div {\n",
+              "      margin-bottom: 4px;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "    <script>\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#df-93925863-7b3e-4334-b2f1-9ce74f6b3bff button.colab-df-convert');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      async function convertToInteractive(key) {\n",
+              "        const element = document.querySelector('#df-93925863-7b3e-4334-b2f1-9ce74f6b3bff');\n",
+              "        const dataTable =\n",
+              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                    [key], {});\n",
+              "        if (!dataTable) return;\n",
+              "\n",
+              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "          + ' to learn more about interactive tables.';\n",
+              "        element.innerHTML = '';\n",
+              "        dataTable['output_type'] = 'display_data';\n",
+              "        await google.colab.output.renderOutput(dataTable, element);\n",
+              "        const docLink = document.createElement('div');\n",
+              "        docLink.innerHTML = docLinkHtml;\n",
+              "        element.appendChild(docLink);\n",
+              "      }\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
+              "\n",
+              "  <div id=\"id_6ad9f019-8454-465e-85a8-bf075599ceaa\">\n",
+              "    <style>\n",
+              "      .colab-df-generate {\n",
+              "        background-color: #E8F0FE;\n",
+              "        border: none;\n",
+              "        border-radius: 50%;\n",
+              "        cursor: pointer;\n",
+              "        display: none;\n",
+              "        fill: #1967D2;\n",
+              "        height: 32px;\n",
+              "        padding: 0 0 0 0;\n",
+              "        width: 32px;\n",
+              "      }\n",
+              "\n",
+              "      .colab-df-generate:hover {\n",
+              "        background-color: #E2EBFA;\n",
+              "        box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "        fill: #174EA6;\n",
+              "      }\n",
+              "\n",
+              "      [theme=dark] .colab-df-generate {\n",
+              "        background-color: #3B4455;\n",
+              "        fill: #D2E3FC;\n",
+              "      }\n",
+              "\n",
+              "      [theme=dark] .colab-df-generate:hover {\n",
+              "        background-color: #434B5C;\n",
+              "        box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "        filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "        fill: #FFFFFF;\n",
+              "      }\n",
+              "    </style>\n",
+              "    <button class=\"colab-df-generate\" onclick=\"generateWithVariable('a')\"\n",
+              "            title=\"Generate code using this dataframe.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M7,19H8.4L18.45,9,17,7.55,7,17.6ZM5,21V16.75L18.45,3.32a2,2,0,0,1,2.83,0l1.4,1.43a1.91,1.91,0,0,1,.58,1.4,1.91,1.91,0,0,1-.58,1.4L9.25,21ZM18.45,9,17,7.55Zm-12,3A5.31,5.31,0,0,0,4.9,8.1,5.31,5.31,0,0,0,1,6.5,5.31,5.31,0,0,0,4.9,4.9,5.31,5.31,0,0,0,6.5,1,5.31,5.31,0,0,0,8.1,4.9,5.31,5.31,0,0,0,12,6.5,5.46,5.46,0,0,0,6.5,12Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "    <script>\n",
+              "      (() => {\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#id_6ad9f019-8454-465e-85a8-bf075599ceaa button.colab-df-generate');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      buttonEl.onclick = () => {\n",
+              "        google.colab.notebook.generateWithVariable('a');\n",
+              "      }\n",
+              "      })();\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
+              "    </div>\n",
+              "  </div>\n"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe",
+              "variable_name": "a",
+              "summary": "{\n  \"name\": \"a\",\n  \"rows\": 1,\n  \"fields\": [\n    {\n      \"column\": \"Model Name\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"Lasso\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"MAE CV\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"2116.38 +/- 341.5\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"MAPE CV\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"0.29 +/- 0.01\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"RMSE CV\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"3057.75 +/- 504.26\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+            }
+          },
+          "metadata": {},
+          "execution_count": 144
         }
       ]
     }
