added Rossmann class

--- a/store_sale_prediction.ipynb
+++ b/store_sale_prediction.ipynb
@@ -843,7 +843,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 711
         },
         "id": "9AJMAwsVEkwh",
         "outputId": "b328d3d4-4ea4-47ad-d977-4dbb07be10ba"
@@ -997,7 +997,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 677
         },
         "id": "ElZ6m9cEEkwh",
         "outputId": "d7468215-52ee-4ca8-ad4b-3c77073d0c9c"
@@ -1450,7 +1450,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 711
         },
         "id": "FFelPItdEkwi",
         "outputId": "9ab329d9-748f-4a79-e977-db779de2b20d"
@@ -1649,7 +1649,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 112
         },
         "id": "GKFgbSN3Ekwj",
         "outputId": "bdd48e2f-f6d9-47ad-a3be-59467b7212e2"
@@ -1949,7 +1949,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 488
         },
         "id": "dZc7Tx1jEkwk",
         "outputId": "343f2093-1d51-482f-e5ae-3e49b78d8817"
@@ -2482,7 +2482,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 738
         },
         "id": "H5g8KNWwEkwk",
         "outputId": "25e49971-36a5-461c-f866-610c46cd7978"
@@ -2519,7 +2519,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 735
         },
         "id": "XeppBmQtEkwm",
         "outputId": "0fffb9c5-853f-437f-bd9e-e44cb6e5a1ae"
@@ -2565,7 +2565,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 241
         },
         "id": "PaRsiEScEkwm",
         "outputId": "5702e283-f3d2-4345-e97d-8e67b979aa03"
@@ -2644,7 +2644,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 744
         },
         "id": "Dz3E1XKpEkwm",
         "outputId": "1f6fe1ce-b10c-4f8b-829a-ad57016f9d99"
@@ -2710,7 +2710,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 1000
         },
         "id": "KqCBTmh4Ekwq",
         "outputId": "2410d7dc-5947-4c76-c748-34a7551486ec"
@@ -2931,7 +2931,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 959
         },
         "id": "wDGgLKBPEkw1",
         "outputId": "8a29fbfd-369e-47a2-8a7f-cce0394a941c"
@@ -4947,7 +4947,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 119,
       "metadata": {
         "id": "XqpmlLRIEkxR"
       },
@@ -4998,7 +4998,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 117,
       "metadata": {
         "id": "-XQD9amoEkxT"
       },
@@ -5010,18 +5010,22 @@
         "# competition_distance\n",
         "\n",
         "df5['competition_distance'] = rs.fit_transform(df5[['competition_distance']].values)\n",
+        "pickle.dump(rs, open('parameter/competition_distance_scaler.pkl', 'wb'))\n",
         "\n",
         "# competition time month\n",
         "\n",
         "df5['competition_time_month'] = rs.fit_transform(df5[['competition_time_month']].values)\n",
+        "pickle.dump(rs, open('parameter/competition_time_month_scaler.pkl', 'wb'))\n",
         "\n",
         "# promo time week\n",
         "\n",
         "df5['promo_time_week'] = mms.fit_transform(df5[['promo_time_week']].values)\n",
+        "pickle.dump(mms, open('parameter/promo_time_week_scaler.pkl', 'wb'))\n",
         "\n",
         "#year\n",
         "\n",
-        "df5['year'] = mms.fit_transform(df5[['year']].values)"
+        "df5['year'] = mms.fit_transform(df5[['year']].values)\n",
+        "pickle.dump(mms, open('parameter/year_scaler.pkl', 'wb'))"
       ]
     },
     {
@@ -5044,7 +5048,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 120,
       "metadata": {
         "id": "-uddYxltEkxU"
       },
@@ -5056,6 +5060,7 @@
         "#store_type - Label Encoding\n",
         "le = LabelEncoder()\n",
         "df5['store_type'] = le.fit_transform(df5['store_type'])\n",
+        "pickle.dump(le, open('parameter/store_type_scaler.pkl', 'wb'))\n",
         "\n",
         "#assortment - Ordinal Encoding\n",
         "assortment_dict = {'basic': 1, 'extra': 2, 'extended':3}\n",
@@ -9415,6 +9420,177 @@
       "metadata": {
         "id": "q1ycLWkQNRZD"
       }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "CuvGLe5heUhc"
+      },
+      "outputs": [],
+      "source": [
+        "class Rossmann (object):\n",
+        "  def __init__ (self):\n",
+        "    state = 1\n",
+        "    self.competition_distance_scaler    = pickle.load( open('parameter/competition_distance_scaler.pkl', 'rb'))\n",
+        "    self.competition_time_month_scaler  = pickle.load( open('parameter/competition_time_month_scaler.pkl', 'rb'))\n",
+        "    self.promo_time_week_scaler         = pickle.load( open('parameter/promo_time_week_scaler.pkl', 'rb'))\n",
+        "    self.year_scaler                    = pickle.load( open('parameter/year_scaler.pkl', 'rb'))\n",
+        "    self.store_type_scaler              = pickle.load( open('parameter/store_type_scaler.pkl', 'rb'))\n",
+        "\n",
+        "  def data_cleaning(self, df1)\n",
+        "    # Rename Columns\n",
+        "    df1 = df_raw.copy()\n",
+        "    cols_old = ['Store', 'DayOfWeek', 'Date', 'Sales', 'Customers', 'Open', 'Promo', 'StateHoliday', 'SchoolHoliday',\n",
+        "                'StoreType', 'Assortment', 'CompetitionDistance', 'CompetitionOpenSinceMonth', 'CompetitionOpenSinceYear',\n",
+        "                'Promo2', 'Promo2SinceWeek', 'Promo2SinceYear', 'PromoInterval']\n",
+        "\n",
+        "    snakecase = lambda x: inflection.underscore( x )\n",
+        "\n",
+        "    cols_new = list (map (snakecase, cols_old))\n",
+        "\n",
+        "    # rename\n",
+        "    df1.columns = cols_new\n",
+        "\n",
+        "    df1['date'] = pd.to_datetime( df1['date'])\n",
+        "    df1.dtypes\n",
+        "\n",
+        "    ## 1.5 Fillout NA\n",
+        "    # competition_distance\n",
+        "\n",
+        "    df1['competition_distance'] = df1['competition_distance'].apply(lambda x: 200000.0 if math.isnan ( x ) else x)\n",
+        "\n",
+        "    # competition_open_since_month\n",
+        "\n",
+        "    df1['competition_open_since_month'] = df1.apply( lambda x: x['date'].month if math.isnan(x['competition_open_since_month']) else x['competition_open_since_month'], axis=1)\n",
+        "\n",
+        "    # competition_open_since_year\n",
+        "\n",
+        "    df1['competition_open_since_year'] = df1.apply( lambda x: x['date'].year if math.isnan(x['competition_open_since_year']) else x['competition_open_since_year'], axis=1)\n",
+        "\n",
+        "    # promo2_since_week\n",
+        "\n",
+        "    df1['promo2_since_week'] = df1.apply( lambda x: x['date'].week if math.isnan(x['promo2_since_week']) else x['promo2_since_week'], axis=1)\n",
+        "\n",
+        "    # promo2_since_year\n",
+        "\n",
+        "    df1['promo2_since_year'] = df1.apply( lambda x: x['date'].year if math.isnan(x['promo2_since_year']) else x['promo2_since_year'], axis=1)\n",
+        "\n",
+        "    # promo_interval\n",
+        "\n",
+        "    month_map = {1: 'Jan', 2: 'Fev', 3: 'Mar', 4: 'Apr', 5: 'May', 6: 'Jun', 7: 'Jul', 8: 'Aug', 9: 'Sep', 10: 'Oct', 11: 'Nov', 12: 'Dec'}\n",
+        "\n",
+        "    df1['promo_interval'].fillna(0, inplace=True)\n",
+        "\n",
+        "    df1['month_map'] = df1['date'].dt.month.map( month_map)\n",
+        "\n",
+        "    df1['is_promo'] = df1[['promo_interval', 'month_map']].apply( lambda x: 0 if x['promo_interval'] == 0 else 1 if x['month_map'] in x['promo_interval'].split( ',') else 0, axis=1)\n",
+        "\n",
+        "\n",
+        "    df1['competition_open_since_month'] = df1['competition_open_since_month'].astype( int )\n",
+        "    df1['competition_open_since_year'] = df1['competition_open_since_year'].astype( int )\n",
+        "\n",
+        "    df1['promo2_since_week'] = df1['promo2_since_week'].astype( int )\n",
+        "    df1['promo2_since_year'] = df1['promo2_since_year'].astype( int )\n",
+        "\n",
+        "    return df1\n",
+        "\n",
+        "  def feature_engineering (self, df2):\n",
+        "    # year\n",
+        "\n",
+        "    df2['year'] = df2['date'].dt.year\n",
+        "\n",
+        "    # month\n",
+        "\n",
+        "    df2['month'] = df2['date'].dt.month\n",
+        "\n",
+        "    # day\n",
+        "\n",
+        "    df2['day'] = df2['date'].dt.day\n",
+        "\n",
+        "    # week of year\n",
+        "\n",
+        "    df2['week_of_year'] = df2['date'].dt.isocalendar().week\n",
+        "\n",
+        "    # year of week\n",
+        "\n",
+        "    df2['year_week'] = df2['date'].dt.strftime( '%Y-%W' )\n",
+        "\n",
+        "    # competition since\n",
+        "\n",
+        "    df2['competition_since'] = df2.apply(lambda x: datetime.datetime ( year=x['competition_open_since_year'], month=x['competition_open_since_month'], day=1) , axis= 1)\n",
+        "    df2['competition_time_month'] = ((df2['date'] - df2[ 'competition_since'])/30).apply(lambda x: x.days).astype(int)\n",
+        "\n",
+        "    # promo since\n",
+        "\n",
+        "    df2['promo_since'] = df2['promo2_since_year'].astype(str) + '-' + df2['promo2_since_week'].astype(str)\n",
+        "    df2['promo_since'] = df2['promo_since'].apply(lambda x: datetime.datetime.strptime( x + '-1', '%Y-%W-%w') - datetime.timedelta(days = 7))\n",
+        "\n",
+        "    df2['promo_time_week'] = ((df2['date'] - df2['promo_since'])/7).apply( lambda x: x.days).astype(int)\n",
+        "\n",
+        "    # assortment\n",
+        "\n",
+        "    df2['assortment'] = df2['assortment'].apply(lambda x: 'basic' if x == 'a' else 'extra' if x=='b' else 'extended')\n",
+        "\n",
+        "    # state holiday\n",
+        "\n",
+        "    df2['state_holiday'] = df2['state_holiday'].apply(lambda x: 'public_holiday' if x == 'a' else 'easter_holiday' if x=='b' else 'christmas' if x=='c' else 'regular_day')\n",
+        "    ## 3.1 Filtragem das linhas\n",
+        "    df2 = df2[(df2['open'] != 0) & (df2['sales'] > 0)]\n",
+        "    ## 3.2 Seleção das Colunas\n",
+        "    cols_drop = ['customers', 'open', 'promo_interval', 'month_map']\n",
+        "\n",
+        "    df2 = df2.drop(cols_drop, axis=1)\n",
+        "\n",
+        "    return df2\n",
+        "\n",
+        "  def data_preparation (self, df5):\n",
+        "    ## 5.2 Rescaling\n",
+        "    # competition_distance\n",
+        "    df5['competition_distance'] = self.competition_distance_scaler.fit_transform(df5[['competition_distance']].values)\n",
+        "\n",
+        "\n",
+        "    # competition time month\n",
+        "    df5['competition_time_month'] = self.competition_time_month.fit_transform(df5[['competition_time_month']].values)\n",
+        "\n",
+        "\n",
+        "    # promo time week\n",
+        "    df5['promo_time_week'] = self.promo_time_week.fit_transform(df5[['promo_time_week']].values)\n",
+        "\n",
+        "    #year\n",
+        "    df5['year'] = self.year_scaler.fit_transform(df5[['year']].values)\n",
+        "\n",
+        "    ### 5.3.1 Encoding\n",
+        "    #state_holiday - One Hot Encoding\n",
+        "    df5 = pd.get_dummies(df5, prefix=['state_holiday'], columns=['state_holiday'])\n",
+        "\n",
+        "    #store_type - Label Encoding\n",
+        "    df5['store_type'] = self.store_type_scaler.fit_transform(df5['store_type'])\n",
+        "\n",
+        "    #assortment - Ordinal Encoding\n",
+        "    assortment_dict = {'basic': 1, 'extra': 2, 'extended':3}\n",
+        "    df5['assortment'] = df5['assortment'].map(assortment_dict)\n",
+        "\n",
+        "    ### 5.3.3 Nature Transformation\n",
+        "    # month\n",
+        "    df5['month_sin'] = df5['month'].apply(lambda x: np.sin(x * ( 2. * np.pi/12)))\n",
+        "    df5['month_cos'] = df5['month'].apply(lambda x: np.cos(x * ( 2. * np.pi/12)))\n",
+        "    # day\n",
+        "    df5['day_sin'] = df5['day'].apply(lambda x: np.sin(x * ( 2. * np.pi/30)))\n",
+        "    df5['day_cos'] = df5['day'].apply(lambda x: np.cos(x * ( 2. * np.pi/30)))\n",
+        "    # week of year\n",
+        "    df5['week_of_year_sin'] = df5['week_of_year'].apply(lambda x: np.sin(x * ( 2. * np.pi/52)))\n",
+        "    df5['week_of_year_cos'] = df5['week_of_year'].apply(lambda x: np.cos(x * ( 2. * np.pi/52)))\n",
+        "    # day of week\n",
+        "    df5['day_of_week_sin'] = df5['day_of_week'].apply(lambda x: np.sin(x * ( 2. * np.pi/7)))\n",
+        "    df5['day_of_week_cos'] = df5['day_of_week'].apply(lambda x: np.cos(x * ( 2. * np.pi/7)))\n",
+        "\n",
+        "    cols_selected_ =['store', 'promo', 'store_type', 'assortment', 'competition_distance', 'competition_open_since_month',\n",
+        "        'competition_open_since_year', 'promo2', 'promo2_since_week', 'promo2_since_year', 'competition_time_month', 'promo_time_week',\n",
+        "        'month_cos', 'month_sin', 'day_sin', 'day_cos', 'week_of_year_cos', 'week_of_year_sin', 'day_of_week_sin', 'day_of_week_cos']\n",
+        "\n",
+        "    return df5 [cols_selected_ ]"
+      ]
     },
     {
       "cell_type": "markdown",
