added api handler

--- a/store_sale_prediction.ipynb
+++ b/store_sale_prediction.ipynb
@@ -9602,6 +9602,64 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import pickle\n",
+        "import pandas as pd\n",
+        "\n",
+        "\n",
+        "from flask              import Flask, request, Response\n",
+        "from rossmann.Rossmann  import Rossmann\n",
+        "\n",
+        "# loading model\n",
+        "model = pickle.load( open( 'model/model_rossmann.pkl', 'rb'))\n",
+        "\n",
+        "# initialize API\n",
+        "app = Flask ( __name__)\n",
+        "\n",
+        "\n",
+        "\n",
+        "@app.rout('/rossmann/predict', method=['POST'])\n",
+        "def rossmann_predict():\n",
+        "  test_jason = request.get_jason()\n",
+        "\n",
+        "  if test_jason:\n",
+        "    if isinstance(test_jason, dict): # Unique exemple\n",
+        "      test_raw = pd.DataFrame(test_jason, index=[0])\n",
+        "\n",
+        "    else: # Multiple examples\n",
+        "      test_raw - pd.DataFrame(test_jason, columns=test_jason[0].keys())\n",
+        "\n",
+        "    # Instantiate Rossmann class\n",
+        "    pipeline = Rossmann()\n",
+        "\n",
+        "    # data cleaning\n",
+        "    df1 = pipeline.data_cleaning(test_raw)\n",
+        "\n",
+        "    # feature engineering\n",
+        "    df2 = pipeline.feature_engineering(df1)\n",
+        "\n",
+        "    # data preparation\n",
+        "    df3 = pipeline.data_preparation(df2)\n",
+        "\n",
+        "    # prediciton\n",
+        "    df_response = pipeline.get_prediction(model, test_raw, df3)\n",
+        "\n",
+        "    return df_response\n",
+        "\n",
+        "  else:\n",
+        "    return Response('{}', status=200, mimetype='application/json')\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "  app.run('0.0.0.0')"
+      ],
+      "metadata": {
+        "id": "BnBsV12G11M0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## 10.3 API Tester"
