--- a/store_sale_prediction.ipynb
+++ b/store_sale_prediction.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "OBpwLnaaEkwJ"
       },
@@ -25,6 +25,8 @@
         "import pickle\n",
         "warnings.filterwarnings('ignore')\n",
         "\n",
+        "\n",
+        "c:\\users\\ian\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (1.4.0)\n",
         "\n",
         "import pandas   as pd\n",
         "import numpy    as np\n",
@@ -196,7 +198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 2,
       "metadata": {
         "id": "9obeYTB8EkwV"
       },
@@ -9686,7 +9688,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 3,
       "metadata": {
         "id": "ow6-5KVd_3wr"
       },
@@ -9698,7 +9700,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 4,
       "metadata": {
         "id": "5t9FkGah5vQO"
       },
@@ -9711,7 +9713,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 8,
       "metadata": {
         "id": "Sevz4_3O52Sx"
       },
@@ -9722,7 +9724,7 @@
         "df_test = pd.merge(df10, df_store_raw, how='left', on='Store')\n",
         "\n",
         "# choose store for prediction\n",
-        "df_test = df_test[df_test['Store'].isin([24, 12, 22])]\n",
+        "df_test = df_test[df_test['Store'].isin([25, 30, 27])]\n",
         "\n",
         "# remove closed days\n",
         "df_test = df_test[df_test['Open'] != 0]\n",
@@ -9732,7 +9734,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 9,
       "metadata": {
         "id": "7ojV5_Zp7kJq"
       },
@@ -9745,7 +9747,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -9765,7 +9767,7 @@
       "source": [
         "# API Call\n",
         "\n",
-        "url = 'http://127.0.0.1:5000/rossmann/predict'\n",
+        "url = 'https://rossmann-predictions-fzqi.onrender.com/rossmann/predict'\n",
         "header = {'Content-type': 'application/json'}\n",
         "data = data\n",
         "r= requests.post(url, data=data, headers=header)\n",
@@ -9774,7 +9776,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 11,
       "metadata": {
         "id": "2spzXOZAtUiN"
       },
@@ -9785,7 +9787,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -9799,9 +9801,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Store number 12 will sell R$237,204.10 in the next 6 weeeks.\n",
-            "Store number 22 will sell R$185,896.38 in the next 6 weeeks.\n",
-            "Store number 24 will sell R$321,873.08 in the next 6 weeeks.\n"
+            "Store number 25 will sell R$333,906.02 in the next 6 weeeks.\n",
+            "Store number 27 will sell R$234,604.79 in the next 6 weeeks.\n",
+            "Store number 30 will sell R$226,900.41 in the next 6 weeeks.\n"
           ]
         }
       ],
